<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoPoint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Captura">Captura de información</string>
    <string name="title_activity_coordenadas">Coordenadas</string>
    <string name="Lugar">Nombre  o descripción del lugar</string>
    <string name="Lat">Latitud</string>
    <string name="Lng">Longitud</string>
    <string name="Ver">Ver</string>
    <string name="Regresar">Regresar</string>
    <string name="Salir">Salir</string>
    <string name="title_activity_map">Map</string>
    <string name="Guardar1">Guardar</string>
    <string name="Guardar2">GuardarLatLng</string>
    <string name="title_activity_points">Points</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="separador">,</string>

</resources>
